Initial commit for traccar-web

--- a/src/resources/l10n/en.json
+++ b/src/resources/l10n/en.json
@@ -216,7 +216,9 @@
     "deviceCommand": "Command",
     "deviceFollow": "Follow",
     "deviceTotalDistance": "Total Distance",
-    "deviceStatus": "Status",
+    "deviceStatus": "Status Online",
+    "deviceStatus1": "Status Offline",
+    "deviceStatus2": "Status Unknown",
     "deviceStatusOnline": "Online",
     "deviceStatusOffline": "Offline",
     "deviceStatusUnknown": "Unknown",
