--- a/src/resources/l10n/id.json
+++ b/src/resources/l10n/id.json
@@ -78,7 +78,7 @@
     "sharedFilterMap": "Filter on Map",
     "sharedSelectFile": "Pilih Berkas",
     "sharedPhone": "Telepon",
-    "sharedRequired": "Diperlukan",
+    "sharedRequired": "Di Perlukan",
     "sharedPreferences": "Preferensi",
     "sharedPermissions": "Kewenangan",
     "sharedConnections": "Connections",
